<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_slogan">Water Quality System</string>
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_info">Legal Information</string>

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="camera_permission">Camera permission is required</string>

    <!-- App Expiry -->
    <string name="version_expired">Version expired</string>
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>

    <string name="result_list">List of results</string>
    <string name="no_data">No test results yet</string>
    <string name="tap_to_start">Tap the <b>+</b> button below to\nlaunch a new test.</string>
    <string name="start_test">Start test</string>
    <string name="analyzed_image">Analyzed image</string>
    <string name="disable_diagnostics">Disable diagnostics</string>
    <string name="settings_not_clickable">Settings not clickable</string>
    <string name="try_moving_well_lit">Bad lighting. Try moving to a well lit area</string>
    <string name="correct_camera_tilt">Correct the Tilt</string>
    <string name="color_card_not_found">Scanning…</string>
    <string name="capture_photo">Capture photo</string>
    <string name="invalid_image">Invalid image</string>
    <string name="submit_result">Submit Result</string>
    <string name="result">Result</string>
    <string name="analyzed_photo">Analyzed Photo</string>
    <string name="color_extracts">Colors detected</string>
    <string name="confirm_color_extract">If the color detection above is incorrect, redo the capture with better light conditions.</string>
    <string name="result_image">Result image</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="place_card_and_cuvette">Place the card and cuvette with the water sample on the provided stand.</string>
    <string name="when_ready_camera">When ready, point the phone camera at it.</string>
    <string name="click_launch_camera">Click <b>Start</b> below to launch the camera preview.</string>
    <string name="camera_start_align_card">When the camera starts, align the card in the viewer as shown in the example above.</string>
    <string name="continue_on">Continue</string>
    <string name="redo">Redo</string>
    <string name="navigate_up">Navigate up</string>
    <string name="app_in_development">This app is in development. It may be unstable.</string>
    <string name="analyzing_photo">Analyzing photo…</string>
    <string name="brightness">Brightness</string>
    <string name="closer">Closer</string>
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="confirm">Confirm</string>
    <string name="select_calibration_point">Select calibration point</string>
    <string name="select_standard_measured">Select the value of the standard measured</string>
    <string name="color_shift">Color shift</string>

    <!-- ErrorType -->
    <string name="no_error" tools:keep="@string/no_error">Error</string>
    <string name="no_match" tools:keep="@string/no_match">No match</string>
    <string name="calibration_error" tools:keep="@string/calibration_error">Calibration error</string>
    <string name="bad_lighting" tools:keep="@string/bad_lighting">Bad lighting</string>
    <string name="not_bright">Not bright enough</string>
    <string name="too_bright">Too bright</string>
    <string name="too_many_shadows">Shadows on card</string>
    <string name="image_tilted" tools:keep="@string/image_tilted">Tilted image</string>
    <string name="invalid_barcode">Wrong color card</string>
    <string name="wrong_card" tools:keep="@string/wrong_card">Wrong color card</string>

    <!-- RiskType-->
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

    <string name="low_quantity">Sufficient</string>
    <string name="medium_quantity">Insufficient</string>
    <string name="high_quantity">Too high</string>

    <string name="low_safety">Safe</string>
    <string name="medium_safety">Safe</string>
    <string name="high_safety">Unsafe</string>

    <string name="low_alkalinity">Acidic</string>
    <string name="medium_alkalinity">Neutral</string>
    <string name="high_alkalinity">Basic</string>

    <string name="margin_of_error">Margin of error: ±</string>
    <string name="check_color_card">Check that the correct color card is being used. Also ensure that the card is placed in a well lit area with indirect lighting.</string>
    <string name="details">Details</string>
    <string name="no_image_selected">Using camera. Sample image not selected.</string>
    <string name="test_mode_image_selected">Test Mode. Sample Image: %s</string>

    <!--App Update-->
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>

    <string name="unknown" tools:keep="@string/unknown">Unknown</string>
    <string name="fluoride" tools:keep="@string/fluoride">Fluoride</string>
    <string name="fluoride_high_range" tools:keep="@string/fluoride_high_range">Fluoride - High Range</string>
    <string name="iron" tools:keep="@string/iron">Iron</string>
    <string name="nitrate" tools:keep="@string/nitrate">Nitrate</string>
    <string name="ph" tools:keep="@string/ph">pH</string>
    <string name="residual_chlorine" tools:keep="@string/residual_chlorine">Residual Chlorine</string>

    <!-- Unit Tests-->
    <string name="launch">Launch</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="water_tests_1">Water Tests 1</string>
    <string name="water_tests_2">Water Tests 2</string>
    <string name="view_hierarchy">Go To Prompt</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
    <string name="tilt_left_forwards">Tilt phone left side forwards</string>
    <string name="tilt_left_backwards">Tilt phone left side backwards</string>
    <string name="no_location_text" />
    <string name="google_login">Login</string>
    <string name="sign_in_with_google">Sign In</string>
    <string name="logout">Logout</string>
    <string name="preference_file_key" />
    <string name="ffem_lite">ffem Lite</string>
    <string name="Name">Name</string>
    <string name="select_water_source">Specify water source</string>
    <string name="hint">Hint</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="Next">Next</string>
    <string name="launch_activity" />
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="permission_denied_explanation">Permission denied</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="user_name">User Name</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>


    <string-array name="WaterSource">
        <item>Lake Water</item>
        <item>Bore Well Water</item>
        <item>Effluent</item>
        <item>Sewage</item>
        <item>Rain Water</item>
        <item>River Water</item>
        <item>Drinking Water</item>
        <item>Ground Water</item>
    </string-array>


</resources>
